# small_a_tactical_rpg

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml  game_configuration.example.toml  game_configuration.toml
core/src/: factory.rs  gamecontrol.rs  hexagonaltile.rs  lib.rs  logging.rs  main.rs  soots.rs  tilefactory.rs
core/src/gamecontrol/: movement.rs
core/src/hexagonaltile/: factory.rs  terrain.rs  tile.rs
core/src/soots/: arthropods.rs  sfactory.rs  sootsprite.rs
hexboard/src/: builder.rs  gamecontrol.rs  generation.rs  lib.rs
hexgametile/: Cargo.toml  README.md
hexgametile/src/: hexagon.rs  lib.rs
